--- a/local.yml
+++ b/local.yml
@@ -9,5 +9,5 @@
   - include: tasks/users.yml
   - include: tasks/packages.yml
   - include: tasks/cron.yml
-  - include: tasks/dock.yml
-  - include: tasks/config.yml
+#  - include: tasks/dock.yml
+#  - include: tasks/config.yml
