--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -4,4 +4,18 @@
 - name: Install Network Analyzing
   apt:
     name: wireshark
-
+- name: Install Firefox
+  apt:
+    name: firefox
+- name: Install curl
+  apt:
+    name: curl
+- name: Install unzip 
+  apt:
+    name: unzip
+- name: Install xmllint
+  apt:
+    name: xmllint
+- name: Install sed
+  apt:
+    name: sed
